[ADD] working parser, missing room names and duplicate rooms check

--- a/lib/my/Makefile
+++ b/lib/my/Makefile
@@ -26,7 +26,10 @@ SRC = my_compute_power_rec.c
 SRC += my_compute_square_root.c
 SRC += memory_utils.c
 SRC += extra_modifiers.c
+SRC += my_realloc.c
+SRC += my_getnbr_long.c
 SRC += my_putfloat.c
+SRC += my_memcpy.c
 SRC += my_memset.c
 SRC += my_find_prime_sup.c
 SRC += my_getnbr.c
